# Sir-Syed-IOT-Class-Tasks

./: README.md
01-Dec-2019-Class-initial-Task/: Cargo.toml
01-Dec-2019-Class-initial-Task/src/: main.rs
01-Nov-2019-Class-initial-Task/: Cargo.toml
01-Nov-2019-Class-initial_Task/src/: main.rs
06-Oct-2019-Class-initial-Task/: Cargo.toml
08-Dec-2019-Class-Initial-Task/: Cargo.toml
08-Dec-2019-Class-Initial-Task/src/: main.rs
13-Oct-2019-Class-initial-Task/: Cargo.toml
13-Oct-2019-Class-initial-Task/src/: main.rs
6-Oct-2019-Class-initial-Task/src/: main.rs
Chapter 10 Traits Task/: Cargo.toml
Chapter 10 Traits Task/src/: main.rs
Chapter 13 Closure Tasks/: Cargo.toml
Chapter 13 Closure Tasks/src/: main.rs
Chapter 3 Control Flow/src/: main.rs
Chapter 3 Functions Task/: Cargo.toml
Chapter 3 Functions Task/src/: main.rs
Chapter 5 Method Task/: Cargo.toml
Chapter 5 Method Task/src/: main.rs
Chapter 5 Structs Task/src/: main.rs
Chapter 6 Enums Task/: Cargo.toml
Chapter 6 Enums Task/src/: main.rs
Chapter 7 Crates Task/: Cargo.toml
Chapter 7 Crates Task/src/: Syllabus.rs  Timetable.rs  main.rs  teacher.rs
Chapter 7 Library Task/: Cargo.toml
Chapter 8 HashMaps/: Cargo.toml
Chapter 8 Strings Task/: Cargo.toml
Chapter 8 Vectors Task/: Cargo.toml
Crates.io/math-function-crate/mathfunc/: Cargo.toml
Crates.io/math-function-crate/mathfunc/src/: lib.rs
Crates.io/rust-crates/struct-math/: Cargo.toml
Crates.io/rust-crates/struct-math/src/: lib.rs
chap3 control/: Cargo.toml
chap4/: Cargo.toml
chap5_structs/: Cargo.toml
(+7 files in other folders)
