[package]
name = "struct_math"
version = "0.1.0"
authors = ["Anas452 <anasm9877@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Math function with struct"
repository = "https://github.com/MuhammadAnas14/rust-crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
